--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/paulAlexSerban/OCFE-P5-JS-Quotation-Generator#readme",
   "dependencies": {
+    "handlebars": "^4.7.6",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
   },
@@ -29,6 +30,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
+    "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
